--- a/Frontend/socc-front/package.json
+++ b/Frontend/socc-front/package.json
@@ -10,14 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/moment": "^3.2.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroui/date-picker": "^2.3.22",
+    "@heroui/react": "^2.7.11",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/x-data-grid": "^8.5.2",
+    "@mui/x-date-pickers": "^8.5.3",
+    "axios": "^1.10.0",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-select": "^5.10.1"
+    "react-router-dom": "^7.6.2",
+    "react-select": "^5.10.1",
+    "rsuite": "^5.83.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
